--- a/package.json
+++ b/package.json
@@ -11,7 +11,18 @@
 		"url": "https://github.com/Voltra/gdpr-guard.git"
 	},
 	"description": "A bridge between rxjs and gdpr-guard",
-	"main": "index.js",
+	"sideEffects": false,
+	"browser": "./dist/umd/rxGdprGuard.js",
+	"main": "./dist/cjs/index.js",
+	"module": "./dist/esm/index.js",
+	"types": "./lib/index.d.ts",
+	"exports": {
+		".": {
+			"require": "./dist/cjs/index.js",
+			"import": "./dist/esm/index.js",
+			"types": "./lib/index.d.ts"
+		}
+	},
 	"keywords": [
 		"gdpr",
 		"cookies",
@@ -26,8 +37,11 @@
 	],
 	"scripts": {
 		"dev": "webpack --mode development",
-		"build": "webpack --mode production",
 		"watch": "webpack --mode development --watch",
+		"build:umd": "webpack --mode production",
+		"build:cjs": "tsc -p ./tsconfig.cjs.json",
+		"build:esm": "tsc -p ./tsconfig.esm.json",
+		"build": "npm run build:umd && npm run build:cjs && npm run build:esm",
 		"test": "vitest",
 		"predocs": "([[ -d ./docs ]] && rm -rf ./docs) || true",
 		"docs": "typedoc --options typedoc.config.js",
@@ -41,15 +55,25 @@
 		"rxjs": "^7.8.1"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.24.7",
+		"@babel/plugin-transform-class-properties": "^7.24.7",
+		"@babel/preset-env": "^7.24.7",
+		"@babel/preset-typescript": "^7.24.7",
+		"@nuxt/friendly-errors-webpack-plugin": "^2.6.0",
 		"@types/node": "^20.14.2",
 		"@types/webpack": "^5.28.5",
+		"babel-loader": "^9.1.3",
+		"core-js": "^3.37.1",
 		"gh-pages": "^6.1.1",
+		"terser-webpack-plugin": "^5.3.10",
 		"ts-loader": "^9.5.1",
+		"ts-node": "^10.9.2",
 		"typedoc": "^0.25.13",
 		"typescript": "^5.4.5",
 		"vite": "^5.3.1",
 		"vitest": "^1.6.0",
 		"webpack": "^5.92.0",
-		"webpack-cli": "^5.1.4"
+		"webpack-cli": "^5.1.4",
+		"webpackbar": "^6.0.1"
 	}
 }
