--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"build:esm": "tsc -p ./tsconfig.esm.json",
 		"build": "npm run build:umd && npm run build:cjs && npm run build:esm",
 		"test": "vitest",
+		"lint": "eslint --fix .",
 		"predocs": "([[ -d ./docs ]] && rm -rf ./docs) || true",
 		"docs": "typedoc --options typedoc.config.js",
 		"predeploy:docs": "npm run docs",
@@ -59,18 +60,23 @@
 		"@babel/plugin-transform-class-properties": "^7.24.7",
 		"@babel/preset-env": "^7.24.7",
 		"@babel/preset-typescript": "^7.24.7",
+		"@eslint/js": "^9.6.0",
 		"@nuxt/friendly-errors-webpack-plugin": "^2.6.0",
+		"@types/eslint__js": "^8.42.3",
 		"@types/node": "^20.14.2",
 		"@types/webpack": "^5.28.5",
+		"@vitest/coverage-v8": "^1.6.0",
 		"babel-loader": "^9.1.3",
 		"core-js": "^3.37.1",
+		"eslint": "^8.57.0",
 		"gh-pages": "^6.1.1",
 		"terser-webpack-plugin": "^5.3.10",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
 		"typedoc": "^0.25.13",
-		"typescript": "^5.4.5",
+		"typescript": "^5.4.2",
+		"typescript-eslint": "^7.14.1",
 		"vite": "^5.3.1",
 		"vitest": "^1.6.0",
 		"webpack": "^5.92.0",
