--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,5 +3,14 @@
 	"include": [
 		"src/**/*.ts",
 		"tests/**/*.ts",
+		"vitest.config.ts"
 	],
+	"compilerOptions": {
+		"declaration": false,
+		"composite": false,
+		"target": "ES6",
+		"module": "ES6",
+		"moduleResolution": "Node",
+		"tsBuildInfoFile": ".eslint.tsbuildinfo"
+	}
 }
