--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
 		"build": "npm run build:umd && npm run build:cjs && npm run build:esm",
 		"test": "vitest",
 		"lint": "eslint --fix .",
+		"format": "prettier --ignore-path .gitignore --write \"{src,tests}/**/*.{js,ts}\"",
 		"predocs": "([[ -d ./docs ]] && rm -rf ./docs) || true",
 		"docs": "typedoc --options typedoc.config.js",
 		"predeploy:docs": "npm run docs",
-		"deploy:docs": "gh-pages -d docs"
+		"deploy:docs": "gh-pages -d docs",
+		"prepare": "husky"
 	},
 	"license": "MIT",
 	"peerDependencies": {
@@ -69,7 +71,10 @@
 		"babel-loader": "^9.1.3",
 		"core-js": "^3.37.1",
 		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
 		"gh-pages": "^6.1.1",
+		"husky": "^9.0.11",
+		"prettier": "^3.3.2",
 		"terser-webpack-plugin": "^5.3.10",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
