Start testing the observables

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,7 +3,8 @@
 	"include": [
 		"src/**/*.ts",
 		"tests/**/*.ts",
-		"vitest.config.ts"
+		"*.config.ts",
+		"*.config.js"
 	],
 	"compilerOptions": {
 		"paths": {
