--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"@babel/preset-typescript": "^7.24.7",
 		"@eslint/js": "^9.6.0",
 		"@nuxt/friendly-errors-webpack-plugin": "^2.6.0",
+		"@stylistic/eslint-plugin-ts": "^2.3.0",
 		"@types/eslint__js": "^8.42.3",
 		"@types/node": "^20.14.2",
 		"@types/webpack": "^5.28.5",
