--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"core-js": "^3.37.1",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-vitest": "^0.5.4",
 		"gh-pages": "^6.1.1",
 		"husky": "^9.0.11",
 		"prettier": "^3.3.2",
