--- a/package.json
+++ b/package.json
@@ -71,19 +71,20 @@
 		"@vitest/coverage-v8": "^1.6.0",
 		"babel-loader": "^9.2.1",
 		"core-js": "^3.39.0",
-		"eslint": "^8.57.1",
+		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-vitest": "^0.5.4",
 		"gh-pages": "^6.2.0",
 		"husky": "^9.1.7",
+		"lint-staged": "^15.2.10",
 		"prettier": "^3.3.3",
 		"terser-webpack-plugin": "^5.3.10",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
-		"typedoc": "^0.25.13",
-		"typescript": "^5.4.5",
-		"typescript-eslint": "^7.18.0",
+		"typedoc": "^0.26.11",
+		"typescript": "~5.6.0",
+		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.11",
 		"vitest": "^1.6.0",
 		"webpack": "^5.96.1",
