--- a/package.json
+++ b/package.json
@@ -66,25 +66,25 @@
 		"@nuxt/friendly-errors-webpack-plugin": "^2.6.0",
 		"@stylistic/eslint-plugin-ts": "^2.11.0",
 		"@types/eslint__js": "^8.42.3",
-		"@types/node": "^20.17.7",
+		"@types/node": "^20.17.8",
 		"@types/webpack": "^5.28.5",
-		"@vitest/coverage-v8": "^1.6.0",
+		"@vitest/coverage-v8": "^2.1.6",
+		"@vitest/eslint-plugin": "^1.1.11",
 		"babel-loader": "^9.2.1",
 		"core-js": "^3.39.0",
 		"eslint": "^9.15.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-vitest": "^0.5.4",
 		"gh-pages": "^6.2.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.2.10",
-		"prettier": "^3.3.3",
+		"prettier": "^3.4.1",
 		"terser-webpack-plugin": "^5.3.10",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
 		"typedoc": "^0.26.11",
 		"typescript": "~5.5.0",
-		"typescript-eslint": "^8.15.0",
+		"typescript-eslint": "^8.16.0",
 		"vite": "^5.4.11",
 		"vitest": "^2.1.5",
 		"webpack": "^5.96.1",
