--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -9,13 +9,13 @@
 	"compilerOptions": {
 		"paths": {
 			"@/*": ["./src/*"],
-			"@tests/*": ["./tests/*"],
+			"@tests/*": ["./tests/*"]
 		},
 		"declaration": false,
 		"composite": false,
 		"target": "ES6",
 		"module": "ES6",
 		"moduleResolution": "Node",
-		"tsBuildInfoFile": ".eslint.tsbuildinfo"
+		"tsBuildInfoFile": ".eslint.tsbuildinfo",
 	}
 }
