--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"build:cjs": "tsc -p ./tsconfig.cjs.json",
 		"build:esm": "tsc -p ./tsconfig.esm.json",
 		"build": "npm run build:umd && npm run build:cjs && npm run build:esm",
+		"test:mutation": "stryker run",
 		"test": "vitest",
 		"lint": "eslint --fix .",
 		"format": "prettier --ignore-path .gitignore --write \"{src,tests}/**/*.{js,ts}\"",
@@ -64,6 +65,8 @@
 		"@babel/preset-typescript": "^7.26.0",
 		"@eslint/js": "^9.15.0",
 		"@nuxt/friendly-errors-webpack-plugin": "^2.6.0",
+		"@stryker-mutator/api": "^8.6.0",
+		"@stryker-mutator/vitest-runner": "^8.6.0",
 		"@stylistic/eslint-plugin-ts": "^2.11.0",
 		"@types/eslint__js": "^8.42.3",
 		"@types/node": "^20.17.8",
@@ -78,6 +81,7 @@
 		"husky": "^9.1.7",
 		"lint-staged": "^15.2.10",
 		"prettier": "^3.4.1",
+		"stryker-cli": "^1.0.2",
 		"terser-webpack-plugin": "^5.3.10",
 		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.2",
